fixed jump loop and added styles

--- a/style.css
+++ b/style.css
@@ -12,29 +12,46 @@ body {
 
 #game-container {
     position: relative;
-    width: 800px;
-    height: 400px;
+    width: 1000px;
+    height: 600px;
     margin: 20px auto;
     border: 10px solid #6d6d6d;
-    background: #fff;
-    overflow: hidden;
+    background-image:url("./public/img/scenery.png");
+    background-size: cover;
     border-radius: 30px;
 }
 
 .personaje {
     position: absolute;
-    width: 50px;
-    height: 50px;
-    background-color: #07a07c;
-    border-radius: 50%;
-    border: 5px solid #07a050;
+    width: 180px;
+    height: 180px;
+    background-image: url("./public/img/pirateCharacter.png");
+    background-size: cover;
+    background-position: center; 
+    object-fit: fill;
+}
+
+.personaje.left {
+    transform: scaleX(-1)
 }
 
 .moneda {
     position: absolute;
-    width: 30px;
-    height: 30px;
-    background-color: gold;
+    width: 40px;
+    height: 40px;
+    background-image: url("./public/img/coin.png");
+    background-size: cover;
+    background-position: center;
     border-radius: 50%;
-    box-shadow: 0 0 10px 2px rgba(255, 223, 0, 0.8);
+    box-shadow: 0 0 10px 2px rgba(255, 255, 0, 0.9);
+    animation: bouncing 2s infinite;
+}
+
+@keyframes bouncing {
+    from {
+        transform: rotate3d(1, 1, 0, 10deg); 
+    }
+    to {
+        transform: rotate3d(1, 1, 0, 360deg);
+    }
 }
